refactor: misc style updates

--- a/src/app/common/search-input/search-input.component.html
+++ b/src/app/common/search-input/search-input.component.html
@@ -14,7 +14,7 @@
 	}
 </div>
 @if (!disableMinCountMessage() && showMinCountMessage()) {
-	<div class="text-muted pt-2" [@minCount]>
+	<div class="text-body-secondary pt-2" [@minCount]>
 		<div class="pt-2">
 			Searches require a minimum of {{ minSearchCharacterCount() }} characters.
 		</div>
