--- a/src/app/site/example/forms/forms.component.html
+++ b/src/app/site/example/forms/forms.component.html
@@ -12,7 +12,9 @@
 			cdkFocusInitial
 			placeholder="Default input"
 		/>
-		<small class="form-text text-muted">Extra explanation provided if necessary.</small>
+		<small class="form-text text-body-secondary"
+			>Extra explanation provided if necessary.</small
+		>
 	</div>
 
 	<div class="mb-3">
