--- a/src/styles/bootstrap/_forms.scss
+++ b/src/styles/bootstrap/_forms.scss
@@ -28,7 +28,7 @@ input[bsDatepicker] + span {
 
 .inline-edit-btns {
 	background: var(--bs-body-bg);
-	border-top: 1px solid $border-color;
+	border-top: 1px solid var(--bs-border-color);
 	border-radius: 0 0 $border-radius $border-radius;
 	bottom: $form-inline-edit-btns-bottom;
 	margin-left: -1 * $card-spacer-x;
