--- a/src/app/common/table/columns/text/text-column.component.html
+++ b/src/app/common/table/columns/text/text-column.component.html
@@ -4,7 +4,7 @@
 			{{ header() ?? (name | titlecase) }}
 		</ng-template>
 		<ng-template
-			[ngTemplateOutlet]="headerTemplate ?? defaultHeaderTemplate"
+			[ngTemplateOutlet]="headerTemplate() ?? defaultHeaderTemplate"
 			[ngTemplateOutletContext]="{
 				header: header()
 			}"
